<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/clearList"
       android:title="@string/clearListShopping"
       android:orderInCategory="100">

</item>
    <item android:id="@+id/shareList"
        android:title="@string/shareListShopping"
        android:orderInCategory="200">
    </item>
    <item android:id="@+id/deleteItem"
        android:title="@string/deleteItemListShopping"
        android:orderInCategory="300">
    </item>
    <item android:id="@+id/inputItem"
        android:title="@string/inputItemShoppingList"
        android:orderInCategory="200"
        android:icon="@drawable/shopping_bag"
        app:actionLayout="@layout/item_edit_text"
        app:showAsAction="always|collapseActionView">

    </item>
    <item android:id="@+id/saveItem"
        android:title="@string/saveItemShoppingList"
        android:orderInCategory="100"
        android:icon="@drawable/download_item"
        app:showAsAction="ifRoom">

    </item>
</menu>